benchmark/grammar.txt
Grammar <- S Definition+ !.
Definition <- Identifier Arrow Exp

Exp <- Seq ("/" S Seq)*
Seq <- Prefix+
Prefix <- ([&!] S)? Suffixed
Suffixed <- Primary S Suffix?
Suffix <- [+*?] S
        / "^" Number

Primary <- "(" S Exp ")" S
         / "{" S Exp "}" S
         / Defined
         / Literal
         / CaseInsensitive
         / CharacterSet
         / "." S
         / Identifier !Arrow

Literal <- String
CaseInsensitive <- "I" String
String <- '"' (!'"' Character)* '"' S
        / "'" (!"'" Character)* "'" S
CharacterSet <- "[" "^"? Item (!"]" Item)* "]" S
Item <- Defined / Range / Character
Range <- . "-" [^]]
Character <- "\\" [abfnrtv'"\[\]\\]
           / "\\" [0-2][0-7][0-7]
           / "\\" [0-7][0-7]?
           / .
Defined <- "\\" [wWaAcCdDgGlLpPsSuUxX] S

S <- (\s / "#" [^\n]*)*
Identifier <- [A-Za-z_][A-Za-z0-9_-]* S
Arrow <- "<-" S
Number <- [+-]? \d+ S
################################################################################
